exports[`test renders a directory with header 1`] = `
<div>
  <header
    className="DirectoryHeaderWithBanner">
    <div
      className="DirectoryHeaderWithBannerImage Opaque"
      style={
        Object {
          "backgroundImage": "linear-gradient(rgba(0, 0, 0, 0) 50%,
                  rgba(0, 0, 0, 0.8)),
                  url(http://demo.opium.sitioweb.fr/2010-mavericks-competition-edit1-jpg/thumbs/1920-400)",
        }
      } />
    <a
      className="Back"
      onClick={[Function]}
      style={Object {}}>
      <svg
        fill="currentColor"
        height="1em"
        preserveAspectRatio="xMidYMid meet"
        style={
          Object {
            "color": undefined,
            "verticalAlign": "middle",
          }
        }
        viewBox="0 0 40 40"
        width="1em">
        <g>
          <path
            d="m24 9.3c-1.3-1.3-3.4-1.3-4.7 0l-10.7 10.7 10.7 10.7c0.7 0.6 1.5 1 2.4 1s1.7-0.4 2.3-1c1.3-1.3 1.3-3.4 0-4.7l-5.9-6 5.9-6c1.3-1.3 1.3-3.4 0-4.7z" />
        </g>
      </svg>
      Back to albums
    </a>
    <h1
      className="DirectoryHeaderTitle">
      foo
    </h1>
  </header>
  <div
    className="ThumbnailList">
    <a
      onClick={[Function]}
      style={Object {}}>
      <article
        className="Thumbnail"
        style={
          Object {
            "backgroundImage": "url(http://demo.opium.sitioweb.fr/2909-vallon-moy-res-jpg/thumbs/200-200)",
          }
        }>
        <span
          className="Caption">
          Alps
        </span>
      </article>
    </a>
    <a
      onClick={[Function]}
      style={Object {}}>
      <article
        className="Thumbnail"
        style={
          Object {
            "backgroundImage": "url(http://demo.opium.sitioweb.fr/2010-mavericks-competition-edit1-jpg/thumbs/200-200)",
          }
        }>
        <span
          className="Caption">
          Pacific Ocean
        </span>
      </article>
    </a>
  </div>
  <footer
    className="Footer">
    Total number of items: 
    2
  </footer>
</div>
`;

exports[`test renders a non empty directory 1`] = `
<div>
  <div
    className="ThumbnailList">
    <a
      onClick={[Function]}
      style={Object {}}>
      <article
        className="Thumbnail"
        style={
          Object {
            "backgroundImage": "url(http://demo.opium.sitioweb.fr/2909-vallon-moy-res-jpg/thumbs/200-200)",
          }
        }>
        <span
          className="Caption">
          Alps
        </span>
      </article>
    </a>
    <a
      onClick={[Function]}
      style={Object {}}>
      <article
        className="Thumbnail"
        style={
          Object {
            "backgroundImage": "url(http://demo.opium.sitioweb.fr/2010-mavericks-competition-edit1-jpg/thumbs/200-200)",
          }
        }>
        <span
          className="Caption">
          Pacific Ocean
        </span>
      </article>
    </a>
  </div>
  <footer
    className="Footer">
    Total number of items: 
    2
  </footer>
</div>
`;

exports[`test renders a non empty directory with parent 1`] = `
<div>
  <header
    className="">
    <a
      className="Back"
      onClick={[Function]}
      style={Object {}}>
      <svg
        fill="currentColor"
        height="1em"
        preserveAspectRatio="xMidYMid meet"
        style={
          Object {
            "color": undefined,
            "verticalAlign": "middle",
          }
        }
        viewBox="0 0 40 40"
        width="1em">
        <g>
          <path
            d="m24 9.3c-1.3-1.3-3.4-1.3-4.7 0l-10.7 10.7 10.7 10.7c0.7 0.6 1.5 1 2.4 1s1.7-0.4 2.3-1c1.3-1.3 1.3-3.4 0-4.7l-5.9-6 5.9-6c1.3-1.3 1.3-3.4 0-4.7z" />
        </g>
      </svg>
      Back to albums
    </a>
  </header>
  <div
    className="ThumbnailList">
    <a
      onClick={[Function]}
      style={Object {}}>
      <article
        className="Thumbnail"
        style={
          Object {
            "backgroundImage": "url(http://demo.opium.sitioweb.fr/2909-vallon-moy-res-jpg/thumbs/200-200)",
          }
        }>
        <span
          className="Caption">
          Alps
        </span>
      </article>
    </a>
    <a
      onClick={[Function]}
      style={Object {}}>
      <article
        className="Thumbnail"
        style={
          Object {
            "backgroundImage": "url(http://demo.opium.sitioweb.fr/2010-mavericks-competition-edit1-jpg/thumbs/200-200)",
          }
        }>
        <span
          className="Caption">
          Pacific Ocean
        </span>
      </article>
    </a>
  </div>
  <footer
    className="Footer">
    Total number of items: 
    2
  </footer>
</div>
`;

exports[`test renders an empty directory 1`] = `
<div>
  <div
    className="ThumbnailList" />
  <footer
    className="Footer">
    Total number of items: 
    0
  </footer>
</div>
`;

exports[`test renders directory without crashing 1`] = `<div />`;
